[tool.poetry]
name = "ergo"
version = "0.1.0"
description = "Ergo enables data analysts, scientists, and engineers to transform data using software engineering and DataOps best practices."
authors = ["Jenny Kwan <me@jennykwan.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "ergo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
psycopg = "^3.1.18"
sqlalchemy = "^2.0.29"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
